pingpong-log-output/log_output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: files
      containers:
      - name: hash-generator
        image: sirpacoder/hash-generator:v1.10
        imagePullPolicy: Always
        volumeMounts:
          - name: files
            mountPath: /app/files
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "500m"
      - name: hash-reader
        image: sirpacoder/hash-reader:v1.10
        imagePullPolicy: Always
        volumeMounts:
          - name: files
            mountPath: /app/files
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "500m"
